--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 /[Uu]serSettings/
+/[Aa]ssets/TextMesh\ Pro/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -51,6 +52,7 @@ ExportedObj/
 *.pidb.meta
 *.pdb.meta
 *.mdb.meta
+TextMesh\ Pro.meta
 
 # Unity3D generated file on crash reports
 sysinfo.txt
